--- a/openam/openam-distribution/openam-distribution-ssoconfiguratortools/src/main/assembly/config/README
+++ b/openam/openam-distribution/openam-distribution-ssoconfiguratortools/src/main/assembly/config/README
@@ -1,8 +1,8 @@
 <!--
    DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
-  
+
    Copyright (c) 2008 Sun Microsystems Inc. All Rights Reserved
-  
+
    The contents of this file are subject to the terms
    of the Common Development and Distribution License
    (the License). You may not use this file except in
@@ -27,62 +27,50 @@
 -->
 
 <!--
-    Portions Copyrighted 2011 ForgeRock AS
+    Portions Copyrighted 2011-2013 ForgeRock AS
 -->
-                                                                               
-OpenAM: ssoConfiguratorTools.zip 
+
+OpenAM: openam-distribution-ssoconfiguratortools-${project.version}.zip
 ====================================================
 
-This file contains information on installing and using ssoConfiguratorTools.zip.
+This file contains information on installing and using
+openam-distribution-ssoconfiguratortools-${project.version}.zip.
 It is assumed that OpenAM Server has been deployed.
 
 Table of contents:
 -----------------
 1. Supported versions of Java Runtime
-2. Installing ssoConfiguratorTools.zip
+2. Installing openam-distribution-ssoconfiguratortools-${project.version}.zip
 3. What does this package contain?
 
 1. Supported versions of Java Runtime
 -------------------------
-J2SE 1.5 or higher.
+Java SE 1.5 or higher.
 
-2. Installing ssoConfiguratorTools.zip
--------------------------------------- 
+2. Installing openam-distribution-ssoconfiguratortools-${project.version}.zip
+--------------------------------------
 
 Before setting up ssoConfiguratorTools.zip, JAVA_HOME environment variable
 needs to be initialized to a path of a compatible Java Runtime.
 
-Steps involved in installing ssoConfiguratorTools.zip are:
+If you want to setup OpenAM then run the following command:
+        \${JAVA_HOME}/bin/java -jar openam-configurator-tool-${project.version}.jar -f <configuration file>
 
-Step 1: Unzip ssoConfiguratorTools.zip to the desired directory.
+If you have already deployed OpenAM and want to upgrade run the following command:
+        \${JAVA_HOME}/bin/java -jar openam-upgrade-tool-${project.version}.jar -f <upgrade file>
 
-Step 2: Go to the directory which has the ssoConfiguratorTools.zip unzipped.
-
-Step 3: After step 2 is performed, if you want to setup OpenAM then goto step 4
-        or if you want to upgrade OpenAM goto step 5.
-
-Step 4: To seutp OpenAM run the following command:
-        ${JAVA_HOME}/bin/java -jar configurator.jar -f <configuration file>
-
-Step 5: If you have already deployed OpenAM and want to upgrade
-        run the following command:
-        ${JAVA_HOME}/bin/java -jar upgrade.jar -f <upgrade file>
-        
 3. What does this package contain?
 ----------------------------------
 <ZIP_ROOT>
 |
-|----README.setup (this file)
+|----README (this file)
 |
-|----configurator.jar (binaries needed for the configuration tool)
+|----openam-configurator-tool-${project.version}.jar (binaries needed for the configuration tool)
 |
-|----upgrade.jar (binaries needed for the upgrade tool)
+|----openam-upgrade-tool-${project.version}.jar (binaries needed for the upgrade tool)
 |
 |----license.txt (license file)
 |
 |----sampleconfiguration (a sample configuration file)
 |
 |----sampleupgrade (a sample upgrade file)
-
-
-
