with functioning principal-mapping based upon jwt-attributes
git-svn-id: https://svn.forgerock.org/openam/branches/oidc_authn@8540 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-authentication/openam-auth-oidc/src/main/resources/amAuthOpenIdConnect_de.properties
+++ b/openam-authentication/openam-auth-oidc/src/main/resources/amAuthOpenIdConnect_de.properties
@@ -3,9 +3,14 @@ header_name=placeholder
 issuer_name=placeholder
 crypto_context_type=placeholder
 crypto_context_value=placeholder
+profile_service_url=placeholder
+princial_mapper_class=placeholder
+local_to_jwt_attr_mappings=placeholder
 verification_failed=placeholder
 issuer_mismatch=placeholder
 jwt_parse_error=placeholder
 missing_header=placeholder
 jwk_not_loaded=placeholder
+principal_mapper_instantiation_error=placeholder
+principal_mapping_failure=placeholder
 
