added unit tests, and a bit of cleanup and more rigorous error handling in the oidc authN module
git-svn-id: https://svn.forgerock.org/openam/branches/oidc_authn@8565 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam-authentication/openam-auth-oidc/src/main/resources/amAuthOpenIdConnect_de.properties
+++ b/openam-authentication/openam-auth-oidc/src/main/resources/amAuthOpenIdConnect_de.properties
@@ -19,3 +19,4 @@ missing_header=placeholder
 jwk_not_loaded=placeholder
 principal_mapper_instantiation_error=placeholder
 principal_mapping_failure=placeholder
+no_attributes_mapped=placeholder
