Basic oAuth2 token table in place.. missing client name and refresh token delete
git-svn-id: https://svn.forgerock.org/openam/branches/AME-4254@10137 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam/openam-ui-ria/src/main/resources/locales/en/translation.json
+++ b/openam/openam-ui-ria/src/main/resources/locales/en/translation.json
@@ -349,6 +349,13 @@
                 "deleteDevice" : "Delete Device"
             }
         },
+        "oAuth2" : {
+            "tokens" : {
+                "appName" : "App Name",
+                "expiryDate" : "Expiry Date",
+                "deleteToken" : "Delete Token"
+            }
+        },
         "authentication": {
             "input": {
                 "name": "Username",
