Scopes locale sorted
git-svn-id: https://svn.forgerock.org/openam/branches/AME-4254@10237 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d

--- a/openam/openam-ui-ria/src/main/resources/locales/en/translation.json
+++ b/openam/openam-ui-ria/src/main/resources/locales/en/translation.json
@@ -165,7 +165,7 @@
         },
         "oauth": {
             "clientID" : "Client ID",
-            "tokenList" : "Token List",
+            "tokenList" : "Authorized Apps",
             "remainingTokens" : "remaining tokens",
             "tokenID" : "Token ID",
             "expireDate" : "Expire Date",
@@ -351,9 +351,10 @@
         },
         "oAuth2" : {
             "tokens" : {
-                "appName" : "App Name",
+                "appName" : "Application",
+                "scope" : "Scope",
                 "expiryDate" : "Expiry Date",
-                "deleteToken" : "Delete Token"
+                "deleteToken" : "Revoke Access"
             }
         },
         "authentication": {
